--- a/bookingfrontend/setup/phpgw_en.lang
+++ b/bookingfrontend/setup/phpgw_en.lang
@@ -64,6 +64,7 @@ Choose another building	bookingfrontend	en	Choose another building
 Choose atleast one object	bookingfrontend	en	Choose at least one object
 Choose categories	bookingfrontend	en	Choose categories
 Choose date	bookingfrontend	en	Choose date
+add_date	bookingfrontend	en	Add date
 Choose date-range	bookingfrontend	en	Choose date range
 Choose resources	bookingfrontend	en	Choose resources
 Close	bookingfrontend	en	Close
@@ -303,6 +304,7 @@ choose a date	bookingfrontend	en	Choose a date
 choose file	bookingfrontend	en	Choose file
 choose rent object and rentperiod	bookingfrontend	en	Choose rent object and rentperiod
 choose rent object	bookingfrontend	en	Choose rent object
+add_rent_object	bookingfrontend	en	Add rent object
 choose rent period	bookingfrontend	en	Choose rent period
 choose target audience	bookingfrontend	en	Choose target audience
 chosen rent object	bookingfrontend	en	Chosen resources
