--- a/bookingfrontend/setup/phpgw_nn.lang
+++ b/bookingfrontend/setup/phpgw_nn.lang
@@ -640,3 +640,8 @@ please_correct_errors_before_proceeding	bookingfrontend	nn	Ver venleg og rett fe
 selected_time_must_be_in_future	bookingfrontend	nn	Det valde tidspunktet må vere i framtida
 start_time_must_be_before_end_time	bookingfrontend	nn	Starttida må vere tidlegare enn sluttida
 please_fill_all_date_and_time_fields	bookingfrontend	nn	Ver venleg og fyll ut alle dato- og tidsfelt
+please_select_target_audience	bookingfrontend	nn	Ver venleg og vel ei målgruppe
+please_enter_event_name	bookingfrontend	nn	Ver venleg og skriv inn namnet på arrangementet/aktiviteten
+please_enter_organizer	bookingfrontend	nn	Ver venleg og skriv inn arrangør/ansvarleg søkjar
+please_enter_participants	bookingfrontend	nn	Ver venleg og skriv inn estimert tal på deltakarar
+please_accept_terms	bookingfrontend	nn	Ver venleg og godta vilkåra
