--- a/bookingfrontend/setup/phpgw_en.lang
+++ b/bookingfrontend/setup/phpgw_en.lang
@@ -645,3 +645,5 @@ please_enter_event_name	bookingfrontend	en	Please enter the name for the event/a
 please_enter_organizer	bookingfrontend	en	Please enter the organizer/responsible seeker
 please_enter_participants	bookingfrontend	en	Please enter the estimated number of participants
 please_accept_terms	bookingfrontend	en	Please accept the terms and conditions
+organization_calendar	bookingfrontend	en	Organization Calendar
+no_resources_found	bookingfrontend	en	No resources found for the given date
