--- a/bookingfrontend/setup/phpgw_nn.lang
+++ b/bookingfrontend/setup/phpgw_nn.lang
@@ -647,3 +647,4 @@ please_enter_participants	bookingfrontend	nn	Ver venleg og skriv inn estimert ta
 please_accept_terms	bookingfrontend	nn	Ver venleg og godta vilkåra
 organization_calendar	bookingfrontend	nn	Organisasjonskalender
 no_resources_found	bookingfrontend	nn	Ingen ressursar funne for den valde datoen
+no_documents_to_accept	bookingfrontend	nn	Det er ingen dokument å godkjenne for denne søknaden.
