Add deny_application_if_booked to resources

--- a/booking/setup/phpgw_no.lang
+++ b/booking/setup/phpgw_no.lang
@@ -934,3 +934,4 @@ article group	booking	no	Artikkelgruppe
 buffer deadline	booking	no	Buffer/frist
 skip bas	booking	no	Ikke trigge SD-anlegg
 multi domain	booking	no	Støtte for kryss-instans
+deny application if booked	booking	no	Blokker søknad om opptatt
