--- a/booking/setup/phpgw_nn.lang
+++ b/booking/setup/phpgw_nn.lang
@@ -934,3 +934,4 @@ article group	booking	nn	Artikkelgruppe
 buffer deadline	booking	nn	Buffer/frist
 skip bas	booking	nn	Ikkje trigge SD-anlegg
 multi domain	booking	nn	Støtte for kryss-instans
+deny application if booked	booking	nn	Blokker søknad om oppteken
